--- a/data/v2rayse-live.yaml
+++ b/data/v2rayse-live.yaml
@@ -1,6 +1,6 @@
 # 生成地址：v2rayse.com
 # 模版名称：defaultName
-# 生成时间：2024-12-21 18:46:37
+# 生成时间：2024-12-28 11:03:24
 # 不要随意改变关键字，否则会导致出错
 # acl4SSR规则
 # 去广告：支持
@@ -58,172 +58,467 @@ tun:
     - 1.1.1.1
     - 1.0.0.1
 proxies:
-  - name: 🇺🇸_US_美国_1
-    port: 8080
-    server: 79.110.53.169
+  - name: 🇷🇺_RU_俄罗斯_1
+    port: 9084
+    server: 217.30.10.18
     type: ss
     udp: true
-    password: 14fFPrbezE3HDZzsMOr6
-    cipher: rc4-md5
-  - name: 🇷🇺_RU_俄罗斯_1
+    password: c3NtHJ5ujV2tGDfj
+    cipher: aes-256-cfb
+  - name: 🇷🇺_RU_俄罗斯_2
+    port: 9010
+    server: 217.30.10.18
+    type: ss
+    udp: true
+    password: f63gg8EruDnUrmz4
+    cipher: aes-256-cfb
+  - name: 🇺🇸_US_美国_1
+    port: 22222
+    server: 3.67.164.0
+    type: trojan
+    network: tcp
+    udp: true
+    sni: trojan.burgerip.co.uk
+    password: telegram-id-privatevpns
+    alpn:
+      - http/1.1
+  - name: 🇺🇸_US_美国_2
+    port: 443
+    server: 35.88.126.102
+    type: ss
+    udp: true
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+    port: 80
+    server: 151.101.66.216
+    type: vless
+    network: ws
+    udp: true
+    ws-opts:
+      path: /?ed=1024
+      headers:
+        host: shermusic.org
+    uuid: f44a6b40-011c-4f2f-beb1-2f7b17e4c407
+  - name: 🇺🇸_US_美国_3
+    port: 5004
+    server: 38.110.1.105
+    type: ss
+    udp: true
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+    port: 80
+    server: 151.101.128.223
+    type: vless
+    network: ws
+    udp: true
+    ws-opts:
+      headers:
+        host: 0-ELi-V2RAY.COM
+    uuid: e19fb179-e8bc-5f8a-91cc-57646cf20984
+  - name: 🇺🇸_US_美国_4
+    port: 443
+    server: 34.211.229.86
+    type: ss
+    udp: true
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - name: 🇷🇺_RU_俄罗斯_3
+    port: 9033
+    server: 217.30.10.18
+    type: ss
+    udp: true
+    password: UTJA57ypk2XKQpnm
+    cipher: aes-256-cfb
+  - name: 🇷🇺_RU_俄罗斯_4
+    port: 9042
+    server: 217.30.10.18
+    type: ss
+    udp: true
+    password: S7KwUu7yBy58S3Ga
+    cipher: aes-256-cfb
+  - name: 🇷🇺_RU_俄罗斯_5
+    port: 9005
+    server: 217.30.10.18
+    type: ss
+    udp: true
+    password: ZET59LF6DvCC8KVt
+    cipher: aes-256-cfb
+  - name: 🇺🇸_US_美国_5
+    port: 8119
+    server: 38.110.1.105
+    type: ss
+    udp: true
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - name: 🇺🇸_US_美国_6
+    port: 7307
+    server: 38.110.1.105
+    type: ss
+    udp: true
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - name: 🇷🇺_RU_俄罗斯_6
     port: 23456
     server: 185.22.155.228
     type: ss
     udp: true
     password: dongtaiwang.com
     cipher: aes-256-gcm
-  - name: 🇷🇺_RU_俄罗斯_2
-    port: 9088
-    server: 217.30.10.18
+  - name: 🇺🇸_US_美国_7
+    port: 8009
+    server: 38.110.1.105
     type: ss
     udp: true
-    password: f8npKgNzdkss2ytn
-    cipher: aes-256-cfb
-  - name: 🇷🇺_RU_俄罗斯_3
-    port: 9018
-    server: 217.30.10.18
-    type: ss
-    udp: true
-    password: fG2artUmHfNT2cX7
-    cipher: aes-256-cfb
-  - name: 🇺🇸_US_美国_2
+    password: XKFKl2rULjIp74
+    cipher: aes-256-gcm
+  - name: 🇺🇸_US_美国_8
     port: 443
-    server: 34.222.132.123
+    server: 35.90.3.81
     type: ss
     udp: true
     password: amazonskr05
     cipher: aes-256-cfb
-  - name: 🇬🇧_GB_英国->🇯🇵_JP_日本
+  - name: 🇬🇧_GB_英国
+    port: 443
+    server: 212.102.53.194
+    type: ss
+    udp: true
+    password: shadowsocks
+    cipher: aes-128-gcm
+  - name: 🇺🇸_US_美国_9
+    port: 5498
+    server: 38.110.1.105
+    type: ss
+    udp: true
+    password: lGqs95QkFHo2NV
+    cipher: aes-256-gcm
+  - name: 🇺🇸_US_美国_10
+    port: 9102
+    server: 38.110.1.105
+    type: ss
+    udp: true
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - name: 🇷🇺_RU_俄罗斯_7
+    port: 9056
+    server: 217.30.10.18
+    type: ss
+    udp: true
+    password: rNBfNuuANFCAk7KB
+    cipher: aes-256-cfb
+  - name: 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+    port: 1935
+    server: 85.133.241.75
+    type: ss
+    udp: true
+    password: 21586aab-3a37-4f55-b8b7-5ae69572d403
+    cipher: chacha20-ietf-poly1305
+  - name: 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+    port: 31930
+    server: 145.223.97.14
+    type: vless
+    network: tcp
+    udp: true
+    uuid: 97670105-a257-4255-9a21-b6842e14e564
+  - name: 🇺🇸_US_美国_11
+    port: 443
+    server: 38.110.1.105
+    type: ss
+    udp: true
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - name: 🇺🇸_US_美国_12
     port: 8080
-    server: 146.70.61.18
+    server: 79.110.53.169
     type: ss
     udp: true
     password: 14fFPrbezE3HDZzsMOr6
     cipher: rc4-md5
-  - name: 🇷🇺_RU_俄罗斯_4
-    port: 9088
-    server: 217.30.10.18
-    type: ss
-    udp: true
-    password: f8npKgNzdkss2ytn
-    cipher: aes-256-cfb
-  - name: 🇷🇺_RU_俄罗斯_5
-    port: 9003
-    server: 217.30.10.18
-    type: ss
-    udp: true
-    password: JdmRK9gMEqFgs8nP
-    cipher: aes-256-cfb
-  - name: 🇺🇸_US_美国_3
-    port: 80
-    server: 151.101.2.228
+  - name: 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+    port: 10078
+    server: 2.189.104.18
     type: vless
     network: ws
     udp: true
     ws-opts:
-      headers:
-        host: wWw.SpEeDtEsT.NeT.ZuLa.Ir.IkCoSaLeS.iR.D662599.v23.drlimit.net
-    uuid: 9e148bc9-38e1-4bee-9c8c-b8e2fdb1bda4
-  - name: 🇷🇺_RU_俄罗斯_6
-    port: 9001
+      path: /
+    uuid: c13ced16-93d9-4e33-9d51-256158b648da
+  - name: 🇺🇸_US_美国_13
+    port: 8080
+    server: 38.110.1.105
+    type: ss
+    udp: true
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - name: 🇺🇸_US_美国_14
+    port: 443
+    server: 35.92.45.179
+    type: ss
+    udp: true
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - name: 🇺🇸_US_美国_15
+    port: 8080
+    server: 169.150.210.233
+    type: ss
+    udp: true
+    password: 14fFPrbezE3HDZzsMOr6
+    cipher: rc4-md5
+  - name: 🇷🇺_RU_俄罗斯_8
+    port: 9037
     server: 217.30.10.18
     type: ss
     udp: true
-    password: UkXRsXvR6buDMG2Y
+    password: TN2YqghxeFDKZfLU
     cipher: aes-256-cfb
+  - name: 🇺🇸_US_美国_16
+    port: 443
+    server: 52.32.68.164
+    type: ss
+    udp: true
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - name: 🇺🇸_US_美国_17
+    port: 443
+    server: 35.85.33.177
+    type: ss
+    udp: true
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - name: 🇷🇴_RO_罗马尼亚
+    port: 8080
+    server: 194.5.215.59
+    type: ss
+    udp: true
+    password: 14fFPrbezE3HDZzsMOr6
+    cipher: rc4-md5
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 🇺🇸_US_美国_1
       - 🇷🇺_RU_俄罗斯_1
       - 🇷🇺_RU_俄罗斯_2
-      - 🇷🇺_RU_俄罗斯_3
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇬🇧_GB_英国->🇯🇵_JP_日本
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+      - 🇺🇸_US_美国_4
+      - 🇷🇺_RU_俄罗斯_3
       - 🇷🇺_RU_俄罗斯_4
       - 🇷🇺_RU_俄罗斯_5
-      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
       - 🇷🇺_RU_俄罗斯_6
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇬🇧_GB_英国
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 🇷🇺_RU_俄罗斯_7
+      - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇺🇸_US_美国_15
+      - 🇷🇺_RU_俄罗斯_8
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇷🇴_RO_罗马尼亚
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 🇺🇸_US_美国_1
       - 🇷🇺_RU_俄罗斯_1
       - 🇷🇺_RU_俄罗斯_2
-      - 🇷🇺_RU_俄罗斯_3
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇬🇧_GB_英国->🇯🇵_JP_日本
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+      - 🇺🇸_US_美国_4
+      - 🇷🇺_RU_俄罗斯_3
       - 🇷🇺_RU_俄罗斯_4
       - 🇷🇺_RU_俄罗斯_5
-      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
       - 🇷🇺_RU_俄罗斯_6
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇬🇧_GB_英国
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 🇷🇺_RU_俄罗斯_7
+      - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇺🇸_US_美国_15
+      - 🇷🇺_RU_俄罗斯_8
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇷🇴_RO_罗马尼亚
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸_US_美国_1
       - 🇷🇺_RU_俄罗斯_1
       - 🇷🇺_RU_俄罗斯_2
-      - 🇷🇺_RU_俄罗斯_3
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇬🇧_GB_英国->🇯🇵_JP_日本
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+      - 🇺🇸_US_美国_4
+      - 🇷🇺_RU_俄罗斯_3
       - 🇷🇺_RU_俄罗斯_4
       - 🇷🇺_RU_俄罗斯_5
-      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
       - 🇷🇺_RU_俄罗斯_6
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇬🇧_GB_英国
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 🇷🇺_RU_俄罗斯_7
+      - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇺🇸_US_美国_15
+      - 🇷🇺_RU_俄罗斯_8
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇷🇴_RO_罗马尼亚
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇺🇸_US_美国_1
       - 🇷🇺_RU_俄罗斯_1
       - 🇷🇺_RU_俄罗斯_2
-      - 🇷🇺_RU_俄罗斯_3
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇬🇧_GB_英国->🇯🇵_JP_日本
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+      - 🇺🇸_US_美国_4
+      - 🇷🇺_RU_俄罗斯_3
       - 🇷🇺_RU_俄罗斯_4
       - 🇷🇺_RU_俄罗斯_5
-      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
       - 🇷🇺_RU_俄罗斯_6
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇬🇧_GB_英国
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 🇷🇺_RU_俄罗斯_7
+      - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇺🇸_US_美国_15
+      - 🇷🇺_RU_俄罗斯_8
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇷🇴_RO_罗马尼亚
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 🇺🇸_US_美国_1
       - 🇷🇺_RU_俄罗斯_1
       - 🇷🇺_RU_俄罗斯_2
-      - 🇷🇺_RU_俄罗斯_3
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇬🇧_GB_英国->🇯🇵_JP_日本
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+      - 🇺🇸_US_美国_4
+      - 🇷🇺_RU_俄罗斯_3
       - 🇷🇺_RU_俄罗斯_4
       - 🇷🇺_RU_俄罗斯_5
-      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
       - 🇷🇺_RU_俄罗斯_6
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇬🇧_GB_英国
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 🇷🇺_RU_俄罗斯_7
+      - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇺🇸_US_美国_15
+      - 🇷🇺_RU_俄罗斯_8
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇷🇴_RO_罗马尼亚
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇺🇸_US_美国_1
       - 🇷🇺_RU_俄罗斯_1
       - 🇷🇺_RU_俄罗斯_2
-      - 🇷🇺_RU_俄罗斯_3
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇬🇧_GB_英国->🇯🇵_JP_日本
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+      - 🇺🇸_US_美国_4
+      - 🇷🇺_RU_俄罗斯_3
       - 🇷🇺_RU_俄罗斯_4
       - 🇷🇺_RU_俄罗斯_5
-      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
       - 🇷🇺_RU_俄罗斯_6
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇬🇧_GB_英国
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 🇷🇺_RU_俄罗斯_7
+      - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇺🇸_US_美国_15
+      - 🇷🇺_RU_俄罗斯_8
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇷🇴_RO_罗马尼亚
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -246,16 +541,38 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸_US_美国_1
       - 🇷🇺_RU_俄罗斯_1
       - 🇷🇺_RU_俄罗斯_2
-      - 🇷🇺_RU_俄罗斯_3
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇬🇧_GB_英国->🇯🇵_JP_日本
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+      - 🇺🇸_US_美国_4
+      - 🇷🇺_RU_俄罗斯_3
       - 🇷🇺_RU_俄罗斯_4
       - 🇷🇺_RU_俄罗斯_5
-      - 🇺🇸_US_美国_3
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
       - 🇷🇺_RU_俄罗斯_6
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇬🇧_GB_英国
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 🇷🇺_RU_俄罗斯_7
+      - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇮🇷_IR_伊朗->🇧🇪_BE_比利时
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇺🇸_US_美国_15
+      - 🇷🇺_RU_俄罗斯_8
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇷🇴_RO_罗马尼亚
 rules:
   - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
   - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
